--- a/project/package.json
+++ b/project/package.json
@@ -27,8 +27,10 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
-    "@ionic/cli": "^7.1.1",
+    "@ionic/cli": "^7.1.6",
     "@ionic/storage-angular": "^4.0.0",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "dayjs": "^1.11.10",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
